--- a/index.html
+++ b/index.html
@@ -84,27 +84,29 @@
       <div class="brand">
         <div class="logo">PR</div>
         <div>
-          <h1>[Nome da Princesa]</h1>
-          <p class="lead">Consultoria Administrativa & Gestão | Profissional e moderna</p>
+          <h1>[ME- Gestão na Prática]</h1>
+          <p class="lead">ADM em formação | Consultoria Simples</p>
         </div>
       </div>
       <nav>
+        <a href="#Sobre mim">Sobre mim</a>
         <a href="#servicos">Serviços</a>
-        <a href="#portfolio">Portfólio</a>
+        <a href="#Agendamentos">Agendamentos</a>
         <a href="#blog">Blog</a>
+       <a href="#Depoimentos">Depoimentos</a>
         <a href="#contato" class="primary">Contato</a>
       </nav>
+  
     </header>
 
     <section class="hero">
       <div class="hero-left card">
-        <span class="pill">Consultoria • Planejamento • Treinamento</span>
-        <h2>Ajudo profissionais e pequenas empresas a organizarem processos e crescerem com eficiência</h2>
-        <p>Serviços de administração, gestão financeira, planejamento estratégico, treinamento de equipe e organização documental.</p>
+        <span class="pill">Organização • Clareza • Produtividade</span>
+        <h2>Passo a passo para organizar seu negócio na prática</h2>
+        <p>Dicas de organização e produtividade, orientações práticas para MEis e pequenos negócios, ferramentas simples que fazem diferença, consultorias acessíveis feitas com carinho e responsabilidade.</p>
         <div class="cta">
           <a class="btn btn-primary" href="#contato">Agendar Consulta</a>
-          <a class="btn btn-outline" href="#servicos">Ver Serviços</a>
-        </div>
+          </div>
 
         <div class="grid-3" style="margin-top:18px">
           <div class="service card">
