--- a/index.html
+++ b/index.html
@@ -155,10 +155,10 @@
     <!-- ====== Contato / Agendamento ====== -->
     <section id="contato" class="card" style="margin-top:18px">
       <h3>Contato & Agendamento</h3>
-      <p class="muted">Entre em contato por WhatsApp, e-mail ou redes sociais.</p>
+      <p class="muted">Entre em contato por E-mail ou Redes sociais.</p>
       <div class="contact-grid" style="margin-top:12px">
-        <a href="https://wa.me/5511999999999" target="_blank">📱 WhatsApp — (11) 99999-9999</a>
-        <a href="mailto:contato@exemplo.com">✉️ Email — contato@exemplo.com</a>
+        <a href="https://wa.me/5511999999999" target="_blank"></a>
+        <a href="mailto:contato@exemplo.com">✉️ Email — me.gestaonapratica@gmail.com</a>
       </div>
 
       <form style="margin-top:12px;display:grid;gap:8px">
@@ -186,3 +186,4 @@
   </script>
 </body>
 </html>
+
