--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Consultoria Administrativa — [Nome da sua princesa]</title>
-  <meta name="description" content="Serviços de consultoria administrativa e gestão — contato, portfólio e agendamento." />
+  <title> ME - Gestão na Prática </title>
+  <meta name="description" content="Serviços de consultoria administrativa simples e descomplicada." />
 
   <!-- ====== CSS (separável em styles.css) ====== -->
   <style>
@@ -157,7 +157,6 @@
       <h3>Contato & Agendamento</h3>
       <p class="muted">Entre em contato por E-mail ou Redes sociais.</p>
       <div class="contact-grid" style="margin-top:12px">
-        <a href="https://wa.me/5511999999999" target="_blank"></a>
         <a href="mailto:contato@exemplo.com">✉️ Email — me.gestaonapratica@gmail.com</a>
       </div>
 
@@ -186,4 +185,5 @@
   </script>
 </body>
 </html>
+
 
