--- a/index.html
+++ b/index.html
@@ -115,11 +115,13 @@
           </div>
           <div class="service card">
             <h3>Organização de Processos</h3>
-            <p class="muted">Mapeamento de atividades e padronização.</p>
+            <p class="muted">Mapeamento de atividades, gestão do tempo e rotina.</p>
           </div>
           <div class="service card">
             <h3>Treinamento</h3>
             <p class="muted">Capacitação de equipes e consultoria personalizada.</p>
+         <div class="service card">
+           <h3>Treinamento</h3>
           </div>
         </div>
       </div>
@@ -185,5 +187,6 @@
   </script>
 </body>
 </html>
+
 
 
