--- a/index.html
+++ b/index.html
@@ -121,7 +121,8 @@
             <h3>Treinamento</h3>
             <p class="muted">Capacitação de equipes e consultoria personalizada.</p>
          <div class="service card">
-           <h3>Treinamento</h3>
+           <h3>Liderança básica</h3>
+           <p class="muted">Comunicação e motivação.</p>
           </div>
         </div>
       </div>
@@ -187,6 +188,7 @@
   </script>
 </body>
 </html>
+
 
 
 
