--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
             <h3>Treinamento</h3>
             <p class="muted">Capacitação de equipes e consultoria personalizada.</p>
           </div>
+          <div class="grid-3" style="margin-top:18px">
           <div class="service card">
           <h3>Liderança básica</h3>
           <p class="muted">Comunicação e motivação.</p>
@@ -187,6 +188,7 @@
   </script>
 </body>
 </html>
+
 
 
 
