--- a/index.html
+++ b/index.html
@@ -128,7 +128,8 @@
       </div>
 
       <!-- ====== Photo: substitua 'photo.jpg' pela foto real que você enviar ====== -->
-      <aside class="card profile-photo">
+     <section id="Sobre mim" class="card" style="margin-top:18px">
+            <aside class="card profile-photo">
         <img src="photo.jpg" alt="Foto da profissional - substituir por arquivo real" />
       </aside>
     </section>
@@ -188,6 +189,7 @@
   </script>
 </body>
 </html>
+
 
 
 
