--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
       </div>
 
       <!-- ====== Photo: substitua 'photo.jpg' pela foto real que você enviar ====== -->
-     <section id="Sobre mim" class="card" 
+     <section id="Sobre mim"
             <aside class="card profile-photo">
         <img src="photo.jpg" alt="Foto da profissional - substituir por arquivo real" />
       </aside>
@@ -189,6 +189,7 @@
   </script>
 </body>
 </html>
+
 
 
 
