--- a/index.html
+++ b/index.html
@@ -131,12 +131,11 @@
             <aside class="card profile-photo">
         <img src="photo.jpg" alt="Foto da profissional - substituir por arquivo real" />
       </aside>
-          </div>
     </section>
 
     <!-- ====== Portfólio / Galeria ====== -->
     <section id="portfolio" class="card" style="margin-top:18px">
-      <h3>Portfólio & Projetos</h3>
+      <h3>Serviços</h3>
       <p class="muted">Alguns trabalhos, treinamentos e resultados.</p>
       <div class="gallery" style="margin-top:12px">
         <img src="gallery1.jpg" alt="Projeto 1" />
@@ -146,7 +145,7 @@
     </section>
 
     <!-- ====== Blog ====== -->
-    <section id="blog" class="card" style="margin-top:18px">
+    <section id="Blog" class="card" style="margin-top:18px">
       <h3>Blog & Dicas</h3>
       <p class="muted">Artigos rápidos sobre gestão e organização.</p>
       <div style="display:grid;grid-template-columns:repeat(3,1fr);gap:12px;margin-top:12px">
@@ -155,7 +154,12 @@
         <div class="card" style="padding:12px"><strong>Título do Post 3</strong><p class="muted">Resumo curto do post...</p></div>
       </div>
     </section>
-
+            
+<!-- ====== Depoimentos ====== -->
+            <section id="Depoimentos" class="card" style="margin-top:18px">
+      <h3>Depoimentos</h3>
+          </div>
+              
     <!-- ====== Contato / Agendamento ====== -->
     <section id="contato" class="card" style="margin-top:18px">
       <h3>Contato & Agendamento</h3>
@@ -189,6 +193,7 @@
   </script>
 </body>
 </html>
+
 
 
 
