--- a/index.html
+++ b/index.html
@@ -126,15 +126,18 @@
           <h3>Liderança básica</h3>
           <p class="muted">Comunicação e motivação.</p>
       </div>
+      </section>
 
-      <!-- ====== Photo: substitua 'photo.jpg' pela foto real que você enviar ====== -->
+      <!-- ====== Sobre mim ====== -->
+            <section id="Sobre mim" class="card" style="margin-top:18px">
+            <h3>Sobre mim</h3>
             <aside class="card profile-photo">
         <img src="photo.jpg" alt="Foto da profissional - substituir por arquivo real" />
       </aside>
     </section>
 
-    <!-- ====== Portfólio / Galeria ====== -->
-    <section id="portfolio" class="card" style="margin-top:18px">
+    <!-- ====== Serviços ====== -->
+    <section id="Serviços" class="card" style="margin-top:18px">
       <h3>Serviços</h3>
       <p class="muted">Alguns trabalhos, treinamentos e resultados.</p>
       <div class="gallery" style="margin-top:12px">
@@ -177,7 +180,7 @@
     </section>
 
     <footer>
-      © <span id="ano"></span> — [Nome da Princesa] • Consultoria Administrativa
+      © <span id="ano"></span> — Me - Gestão na Prática 
     </footer>
   </div>
 
@@ -193,6 +196,7 @@
   </script>
 </body>
 </html>
+
 
 
 
