--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       font-family: Inter, ui-sans-serif, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
     }
     *{box-sizing:border-box}
-    body{margin:0;background:linear-gradient(180deg,var(--bg),#ffffff);color:rgb(222,214,201)}
+    body{margin:0;background:linear-gradient(180deg,var(--bg),#ffffff);color: #DED6C9}
     .wrap{max-width:var(--max);margin:32px auto;padding:20px}
 
     header{display:flex;align-items:center;justify-content:space-between;gap:16px}
@@ -195,6 +195,7 @@
   </script>
 </body>
 </html>
+
 
 
 
