--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     :root{
       --bg:#f6f7fb;
       --card:#ffffff;
-      --accent:#0f62fe; /* azul profissional */
+      --accent:#0f62fe; /* Dourado */
       --muted:#6b7280;
       --radius:14px;
       --max:1100px;
@@ -195,6 +195,7 @@
   </script>
 </body>
 </html>
+
 
 
 
