--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <!-- ====== CSS (separável em styles.css) ====== -->
   <style>
     :root{
-      --bg:#f6f7fb;
+      --bg:#DED6C9;
       --card:#ffffff;
       --accent:#0f62fe; /* Dourado */
       --muted:#6b7280;
@@ -195,6 +195,7 @@
   </script>
 </body>
 </html>
+
 
 
 
