--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <style>
     :root{
       --bg:#DED6C9;
-      --card:#ffffff;
+      --card:#ECE7DF;
       --accent:#0f62fe; /* Dourado */
       --muted:#6b7280;
       --radius:14px;
@@ -195,6 +195,7 @@
   </script>
 </body>
 </html>
+
 
 
 
