--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     :root{
       --bg:#DED6C9;
       --card:#ECE7DF;
-      --accent:#0f62fe; /* Dourado */
+      --accent:#C8C0B2; /* Dourado */
       --muted:#6b7280;
       --radius:14px;
       --max:1100px;
@@ -195,6 +195,7 @@
   </script>
 </body>
 </html>
+
 
 
 
