--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       --muted:#6b7280;
       --radius:14px;
       --max:1100px;
-      --shadow: 0 6px 20px rgba(12,18,30,0.08);
+      --shadow: 0 6px 20px #C8C0B2;
       font-family: Inter, ui-sans-serif, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
     }
     *{box-sizing:border-box}
@@ -195,6 +195,7 @@
   </script>
 </body>
 </html>
+
 
 
 
