--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <!-- ====== CSS (separável em styles.css) ====== -->
   <style>
     :root{
-      --bg:#DED6C9;
+      --bg:#F4EDE3;
       --card:#ECE7DF;
       --accent:#C8C0B2; /* Dourado */
       --muted:#6b7280;
@@ -195,6 +195,7 @@
   </script>
 </body>
 </html>
+
 
 
 
