--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
   <style>
     :root{
       --bg:#F4EDE3;
-      --card:#ECE7DF;
-      --accent:#C8C0B2; /* Dourado */
-      --muted:#6b7280;
+      --card:#FAF7F2;
+      --accent:#C8A969; /* Dourado */
+      --muted:#6E5A48;
       --radius:14px;
       --max:1100px;
-      --shadow: 0 6px 20px #C8C0B2;
+      --shadow: 0 6px 20px #D6C9B8;
       font-family: Inter, ui-sans-serif, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
     }
     *{box-sizing:border-box}
@@ -195,6 +195,7 @@
   </script>
 </body>
 </html>
+
 
 
 
