--- a/index.html
+++ b/index.html
@@ -9,18 +9,31 @@
   <!-- ====== CSS (separável em styles.css) ====== -->
   <style>
     :root{
-      --bg:#F4EDE3;
-      --card:#FAF7F2;
-      --accent:#C8A969; /* Dourado */
-      --muted:#6E5A48;
+      --bg:#E4DCD1;  
+      --card:#F2EFE8; 
+      --secondary: #E5DFD2;
+      --accent:#C1A167; 
+      --muted:#9E9586;
+      --text-strong: #8C837F;
       --radius:14px;
       --max:1100px;
-      --shadow: 0 6px 20px #D6C9B8;
-      font-family: Inter, ui-sans-serif, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
-    }
-    *{box-sizing:border-box}
-    body{margin:0;background:linear-gradient(180deg,var(--bg),#ffffff);color:#898378}
-    .wrap{max-width:var(--max);margin:32px auto;padding:20px}
+     --shadow: 0 6px 20px #D6C9B8;
+     body {
+    margin: 0;
+    background: linear-gradient(180deg, var(--bg), var(--secondary));
+    color: var(--muted); /* Texto elegante */
+    font-family: Inter, ui-sans-serif, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
+}
+
+* {
+    box-sizing: border-box;
+}
+
+.wrap {
+    max-width: var(--max);
+    margin: 32px auto;
+    padding: 20px;
+}
 
     header{display:flex;align-items:center;justify-content:space-between;gap:16px}
     .brand{display:flex;align-items:center;gap:12px}
@@ -195,6 +208,7 @@
   </script>
 </body>
 </html>
+
 
 
 
