--- a/index.html
+++ b/index.html
@@ -35,11 +35,42 @@
     padding: 20px;
 }
 
-    header{display:flex;align-items:center;justify-content:space-between;gap:16px}
-    .brand{display:flex;align-items:center;gap:12px}
-    .logo{width:64px;height:64px;border-radius:12px;background:linear-gradient(135deg,var(--accent),#60a5fa);display:flex;align-items:center;justify-content:center;color:#fff;font-weight:700;font-size:20px;box-shadow:var(--shadow)}
-    h1{font-size:20px;margin:0}
-    p.lead{margin:2px 0 0;color:var(--muted)}
+   header{
+    display:flex;
+    align-items:center;
+    justify-content:space-between;
+    gap:16px;
+}
+
+.brand{
+    display:flex;
+    align-items:center;
+    gap:12px;
+}
+
+.logo{
+    width:64px;
+    height:64px;
+    border-radius:12px;
+
+    /* Gradiente dourado elegante */
+    background:linear-gradient(135deg, var(--accent), #D7BB7E);
+
+    display:flex;
+    align-items:center;
+    justify-content:center;
+
+    color:#fff;
+    font-weight:700;
+    font-size:20px;
+    box-shadow:var(--shadow);
+}
+
+h1{
+    font-size:20px;
+    margin:0;
+    color:var(--text-strong); /* aju*
+
 
     nav{display:flex;gap:12px}
     nav a{padding:10px 14px;border-radius:10px;text-decoration:none;color:var(--muted);font-weight:600}
@@ -208,6 +239,7 @@
   </script>
 </body>
 </html>
+
 
 
 
