--- a/index.html
+++ b/index.html
@@ -24,54 +24,22 @@
     color: var(--muted); /* Texto elegante */
     font-family: Inter, ui-sans-serif, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
 }
-
-* {
-    box-sizing: border-box;
+   *{box-sizing:border-box}
+body{margin:0;background:linear-gradient(180deg,var(-
+-bg),#ffffff);color:#898378}
+      .wrap{max-width:var(--max);margin:32px
+        auto;padding:20px}
 }
-
-.wrap {
-    max-width: var(--max);
-    margin: 32px auto;
-    padding: 20px;
-}
-
-   header{
-    display:flex;
-    align-items:center;
-    justify-content:space-between;
-    gap:16px;
-}
-
-.brand{
-    display:flex;
-    align-items:center;
-    gap:12px;
-}
-
-.logo{
-    width:64px;
-    height:64px;
-    border-radius:12px;
-
-    /* Gradiente dourado elegante */
-    background:linear-gradient(135deg, var(--accent), #D7BB7E);
-
-    display:flex;
-    align-items:center;
-    justify-content:center;
-
-    color:#fff;
-    font-weight:700;
-    font-size:20px;
-    box-shadow:var(--shadow);
-}
-
-h1{
-    font-size:20px;
-    margin:0;
-    color:var(--text-strong); /* aju*
-
-
+  header{display:flex;align-items:center;justify-
+         content:space-between;gap:16px} 
+    .brand{display:flex;align-items:center;gap:12px} 
+    .logo{width:64px;height:64px;border-
+      radius:12px;background:linear-gradient(135deg,var(--
+      accent),#60a5fa);display:flex;align-items:center;justify-
+      content:center;color:#fff;font-weight:700;font-
+      size:20px;box-shadow:var(--shadow)} 
+    h1{font-size:20px;margin:0} p.lead{margin:2px 0 0;color:var(--muted)}
+    
     nav{display:flex;gap:12px}
     nav a{padding:10px 14px;border-radius:10px;text-decoration:none;color:var(--muted);font-weight:600}
     nav a.primary{background:transparent;border:1px solid rgba(15,98,254,0.08);color:var(--accent)}
@@ -239,6 +207,7 @@ h1{
   </script>
 </body>
 </html>
+
 
 
 
