--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <!-- ====== CSS (separável em styles.css) ====== -->
   <style>
     :root{
-      --bg:#E4DCD1;  
+      --bg:#F2EFE8;  
       --card:#F2EFE8; 
       --secondary: #E5DFD2;
       --accent:#C1A167; 
@@ -207,6 +207,7 @@ body{margin:0;background:linear-gradient(180deg,var(-
   </script>
 </body>
 </html>
+
 
 
 
