--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ body{margin:0;background:linear-gradient(180deg,var(-
 
     /* photo card */
     .profile-photo{width:100%;height:420px;border-radius:12px;overflow:hidden;display:flex;align-items:center;justify-content:center}
-    .profile-photo img{width:100%;height:100%;object-fit:cover;display:block}
+    .profile-photo img{width:100%;height:100%;object-fit:cover;display:block} Imagem do WhatsApp de 2025-12-07 à(s) 21.49.03_3a4ef2d8.jpg
 
     /* grid sections */
     .grid-3{display:grid;grid-template-columns:repeat(3,1fr);gap:18px;margin-top:18px}
@@ -207,6 +207,7 @@ body{margin:0;background:linear-gradient(180deg,var(-
   </script>
 </body>
 </html>
+
 
 
 
