--- a/index.html
+++ b/index.html
@@ -202,9 +202,9 @@
       </div>
 
       <aside class="profile-photo card">
-        <img src="photo.jpg" alt="Sua foto profissional" />
-      </aside>
-    </section>
+    <img src="logo-me.jpg" alt="Logo ME - Gestão na Prática" />
+</aside>
+
 
     <section id="sobre" class="card" style="margin-top:18px">
       <h3>Sobre mim</h3>
@@ -256,6 +256,7 @@
 
 </body>
 </html>
+
 
 
 
