--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
       </div>
 
       <aside class="profile-photo card">
-    <img src="logo-me.jpg" alt="Logo ME - Gestão na Prática" />
+    <img src="logo-maria.jpg" alt="Logo ME - Gestão na Prática" />
 </aside>
 
 
@@ -263,6 +263,7 @@ Vamos construir sua melhor versão na prática?...</p>
 
 </body>
 </html>
+
 
 
 
