--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@
 
     .profile-photo {
       width: 100%;
-      height: 420px;
+      max-width: 420px;
+      aspect-ratio: 4 / 5;
       border-radius: 12px;
       overflow: hidden;
       display: flex;
@@ -263,6 +264,7 @@ Vamos construir sua melhor versão na prática?...</p>
 
 </body>
 </html>
+
 
 
 
