--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     .profile-photo img {
       width: 100%;
       height: 100%;
-      object-fit: cover;
+      object-fit: contain;
     }
 
     .grid-3 {
@@ -264,6 +264,7 @@ Vamos construir sua melhor versão na prática?...</p>
 
 </body>
 </html>
+
 
 
 
