--- a/index.html
+++ b/index.html
@@ -167,7 +167,8 @@
 
     <header>
       <div class="brand">
-        <div class="logo">PR</div>
+        <div class="logo">
+           <img src="imagem perfil" alt="Logo ME - Gestão na Prática">
         <div>
           <h1>ME - Gestão na Prática</h1>
           <p class="lead">ADM em formação | Consultoria Simples</p>
@@ -264,6 +265,7 @@ Vamos construir sua melhor versão na prática?...</p>
 
 </body>
 </html>
+
 
 
 
