--- a/index.html
+++ b/index.html
@@ -60,6 +60,12 @@
       font-size: 20px;
       box-shadow: var(--shadow);
     }
+    
+    .logo img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
 
     nav {
       display: flex;
@@ -265,6 +271,7 @@ Vamos construir sua melhor versão na prática?...</p>
 
 </body>
 </html>
+
 
 
 
