--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
     }
 
     .logo {
-      width: 64px;
+      width: 140px;
       height: 64px;
       border-radius: 12px;
-      background: var(--accent);
+      background: transparent;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -271,6 +271,7 @@ Vamos construir sua melhor versão na prática?...</p>
 
 </body>
 </html>
+
 
 
 
