--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
     <header>
       <div class="brand">
         <div class="logo">
-           <img src="imagem perfil" alt="Logo ME - Gestão na Prática">
+           <img src="imagem perfil" 
         <div>
           <h1>ME - Gestão na Prática</h1>
           <p class="lead">ADM em formação | Consultoria Simples</p>
@@ -271,6 +271,7 @@ Vamos construir sua melhor versão na prática?...</p>
 
 </body>
 </html>
+
 
 
 
