--- a/index.html
+++ b/index.html
@@ -47,19 +47,16 @@
       gap: 12px;
     }
 
-    .logo {
-      width: 140px;
-      height: 64px;
-      border-radius: 12px;
-      background: transparent;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      color: #fff;
-      font-weight: 700;
-      font-size: 20px;
-      box-shadow: var(--shadow);
-    }
+   .logo {
+  width: 56px;
+  height: 56px;
+  border-radius: 12px;
+  background: transparent;
+  box-shadow: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
     
     .logo img {
   width: 100%;
@@ -271,6 +268,7 @@ Vamos construir sua melhor versão na prática?...</p>
 
 </body>
 </html>
+
 
 
 
