--- a/index.html
+++ b/index.html
@@ -170,10 +170,9 @@
 
     <header>
       <div class="brand">
-        <div class="logo">
-           <img src="imagem perfil" 
+      <div class="logo">ME</div>
         <div>
-          <h1>ME - Gestão na Prática</h1>
+          <h1>- Gestão na Prática</h1>
           <p class="lead">ADM em formação | Consultoria Simples</p>
         </div>
       </div>
@@ -268,6 +267,7 @@ Vamos construir sua melhor versão na prática?...</p>
 
 </body>
 </html>
+
 
 
 
