--- a/index.html
+++ b/index.html
@@ -185,6 +185,10 @@
         <a href="#contato" class="primary">Contato</a>
       </nav>
     </header>
+    
+<section class="brand-banner">
+  <img src="banner-me.png" alt="ME - Gestão na Prática">
+</section>
 
     <section class="hero">
       <div class="hero-left card">
@@ -267,6 +271,7 @@ Vamos construir sua melhor versão na prática?...</p>
 
 </body>
 </html>
+
 
 
 
