--- a/index.html
+++ b/index.html
@@ -164,21 +164,25 @@
     }
   </style>
 </head>
-  
+  <div class="brand-banner">
+  <img src="banner-me.png" alt="Gestão na Prática">
+</div>
+
 /* Banner de identidade */
 .brand-banner {
-  max-width: var(--max);
+  max-width: 1200px;
   margin: 16px auto 0;
   padding: 0 20px;
 }
 
 .brand-banner img {
   width: 100%;
-  max-height: 140px;
+  height: auto;
+  max-height: 100px;
   object-fit: contain;
   display: block;
 }
-  
+
 @media (max-width: 600px) {
   .brand-banner img {
     max-height: 100px;
@@ -291,6 +295,7 @@ Vamos construir sua melhor versão na prática?...</p>
 
 </body>
 </html>
+
 
 
 
