--- a/index.html
+++ b/index.html
@@ -212,7 +212,13 @@
       <p>
         Olá! Eu sou Maria Eduarda, tenho 24 anos, sou teresinense e estudante do último período de Bacharelado em Administração pela Universidade Estadual do Piauí.
         <br><br>
-        Minha jornada na gestão começou muito antes da sala de aula...
+        Minha jornada na gestão começou muito antes da sala de aula. Sempre fui apaixonada por organização, rotina e pela forma como pequenos ajustes podem transformar completamente a vida das pessoas. Ao longo da graduação, essa paixão ganhou estrutura, método e propósito — e hoje se tornou o meu trabalho.
+
+Criei este espaço para ajudar pessoas que desejam mais clareza, praticidade e equilíbrio, mas não querem nada complicado, pesado ou distante da realidade. Acredito na gestão feita de forma leve, acessível e aplicada ao dia a dia: aquela que realmente funciona.
+
+Aqui você vai encontrar orientação prática, ferramentas simples, acompanhamento próximo e um olhar humano, porque cada pessoa tem sua própria história, ritmo e necessidades. Meu objetivo é caminhar com você para que sua rotina trabalhe a seu favor — não contra você.
+
+Seja para organizar sua vida, sua rotina, seus estudos ou suas finanças leves, você não precisa fazer isso sozinha. Estou aqui para te guiar nessa jornada de forma clara, gentil e eficiente.
         <br><br>
         <strong>Vamos construir sua melhor versão na prática?</strong>
       </p>
@@ -266,6 +272,7 @@
 </body>
 </html>
     
+
 
 
 
