--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 
   <div class="sobre-container">
     <div class="sobre-foto">
-      <img src="Sem fundo 2" alt="Maria Eduarda - ME Gestão na Prática">
+      <img src="Semfund" alt="Maria Eduarda - ME Gestão na Prática">
     </div>
 
     <div class="sobre-texto">
@@ -303,6 +303,7 @@ Seja para organizar sua vida, sua rotina, seus estudos ou suas finanças leves, 
 </body>
 </html>
     
+
 
 
 
