--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="pt-BR">
+
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -36,29 +37,9 @@
 
     header {
       display: flex;
-      align-items: center;
       justify-content: space-between;
+      align-items: center;
       gap: 16px;
-    }
-
-    .brand {
-      display: flex;
-      align-items: center;
-      gap: 12px;
-    }
-
-    .logo {
-      width: 64px;
-      height: 64px;
-      border-radius: 12px;
-      background: var(--accent);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      color: #fff;
-      font-weight: 700;
-      font-size: 20px;
-      box-shadow: var(--shadow);
     }
 
     nav {
@@ -79,14 +60,6 @@
       color: var(--accent);
     }
 
-    .hero {
-      display: grid;
-      grid-template-columns: 1fr 420px;
-      gap: 24px;
-      margin-top: 24px;
-      align-items: center;
-    }
-
     .card {
       background: var(--card);
       padding: 22px;
@@ -94,9 +67,18 @@
       box-shadow: var(--shadow);
     }
 
-    .hero-left h2 { font-size: 28px; margin: 8px 0; }
+    .hero {
+      margin-top: 24px;
+    }
 
-    .cta { display: flex; gap: 12px; margin-top: 12px; }
+    .hero h2 {
+      font-size: 28px;
+      margin: 8px 0;
+    }
+
+    .cta {
+      margin-top: 12px;
+    }
 
     .btn {
       padding: 12px 18px;
@@ -111,23 +93,6 @@
       color: #fff;
     }
 
-    .profile-photo {
-      width: 100%;
-      height: 420px;
-      border-radius: 12px;
-      overflow: hidden;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      background: #eee;
-    }
-
-    .profile-photo img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
-
     .grid-3 {
       display: grid;
       grid-template-columns: repeat(3,1fr);
@@ -135,9 +100,30 @@
       margin-top: 18px;
     }
 
+    /* SOBRE MIM */
+    .sobre-container {
+      display: grid;
+      grid-template-columns: 320px 1fr;
+      gap: 28px;
+      align-items: center;
+    }
+
+    .sobre-foto img {
+      width: 100%;
+      max-height: 420px;
+      object-fit: contain;
+      border-radius: 18px;
+      box-shadow: var(--shadow);
+    }
+
+    .sobre-texto p {
+      margin: 0;
+      line-height: 1.7;
+    }
+
     .gallery img {
       width: 100%;
-      height: 120px;
+      height: 140px;
       object-fit: cover;
       border-radius: 10px;
     }
@@ -145,111 +131,78 @@
     footer {
       margin-top: 28px;
       text-align: center;
-      color: var(--muted);
       font-size: 14px;
     }
 
-    @media (max-width: 980px) {
-      .hero { grid-template-columns: 1fr; }
-      .profile-photo { height: 300px; }
-      .grid-3 { grid-template-columns: repeat(2,1fr); }
+    /* RESPONSIVO */
+    @media (max-width: 900px) {
+      .grid-3 {
+        grid-template-columns: repeat(2,1fr);
+      }
+
+      .sobre-container {
+        grid-template-columns: 1fr;
+        text-align: center;
+      }
+
+      .sobre-foto img {
+        max-width: 260px;
+        margin: 0 auto;
+      }
     }
 
     @media (max-width: 520px) {
-      .grid-3 { grid-template-columns: 1fr; }
+      .grid-3 {
+        grid-template-columns: 1fr;
+      }
     }
-    .sobre-container {
-  display: grid;
-  grid-template-columns: 220px 1fr;
-  gap: 20px;
-  align-items: center;
-}
-
-.sobre-foto img {
-  width: 100%;
-  border-radius: 14px;
-  box-shadow: var(--shadow);
-  object-fit: cover;
-}
-
-.sobre-texto p {
-  margin: 0;
-  line-height: 1.6;
-}
-
-/* Responsivo */
-@media (max-width: 720px) {
-  .sobre-container {
-    grid-template-columns: 1fr;
-    text-align: center;
-  }
-
-  .sobre-foto img {
-    max-width: 220px;
-    margin: 0 auto;
-  }
-
   </style>
 </head>
 
 <body>
-  <div class="wrap">
+<div class="wrap">
 
-    <header>
-      <div class="brand">
-        <div>
-          <h1>ME - Gestão na Prática</h1>
-          <p class="lead">ADM em formação | Consultoria Simples</p>
-        </div>
-      </div>
+<header>
+  <div>
+    <h1>ME - Gestão na Prática</h1>
+    <p>ADM em formação | Consultoria Simples</p>
+  </div>
 
-      <nav>
-        <a href="#sobre">Sobre mim</a>
-        <a href="#servicos">Serviços</a>
-        <a href="#blog">Blog</a>
-        <a href="#depoimentos">Depoimentos</a>
-        <a href="#contato" class="primary">Contato</a>
-      </nav>
-    </header>
+  <nav>
+    <a href="#sobre">Sobre mim</a>
+    <a href="#servicos">Serviços</a>
+    <a href="#blog">Blog</a>
+    <a href="#contato" class="primary">Contato</a>
+  </nav>
+</header>
 
-    <section class="hero">
-      <div class="hero-left card">
-        <span class="pill">Organização • Clareza • Produtividade</span>
+<section class="hero card">
+  <h2>Passo a passo para organizar seu negócio na prática</h2>
+  <p>Dicas de organização e produtividade para MEIs e pequenos negócios.</p>
+  <div class="cta">
+    <a class="btn btn-primary" href="#contato">Agendar Consulta</a>
+  </div>
 
-        <h2>Passo a passo para organizar seu negócio na prática</h2>
+  <div class="grid-3">
+    <div class="card"><h3>Gestão Financeira</h3><p>Fluxo de caixa e planejamento.</p></div>
+    <div class="card"><h3>Processos</h3><p>Organização e rotina.</p></div>
+    <div class="card"><h3>Treinamento</h3><p>Capacitação prática.</p></div>
+  </div>
+</section>
 
-        <p>Dicas de organização e produtividade, orientações práticas para MEIs e pequenos negócios, consultorias acessíveis e humanizadas.</p>
-
-        <div class="cta">
-          <a class="btn btn-primary" href="#contato">Agendar Consulta</a>
-        </div>
-
-        <div class="grid-3">
-          <div class="card"><h3>Gestão Financeira</h3><p>Fluxo de caixa e planejamento.</p></div>
-          <div class="card"><h3>Processos</h3><p>Organização e rotina.</p></div>
-          <div class="card"><h3>Treinamento</h3><p>Capacitação prática.</p></div>
-        </div>
-      </div>
-
-    <section id="sobre" class="card" style="margin-top:18px">
+<section id="sobre" class="card" style="margin-top:18px">
   <h3>Sobre mim</h3>
 
   <div class="sobre-container">
     <div class="sobre-foto">
-      <img src="Semfund" alt="Maria Eduarda - ME Gestão na Prática">
+      <img src="maria-eduarda.png" alt="Maria Eduarda - ME Gestão na Prática">
     </div>
 
     <div class="sobre-texto">
       <p>
-        Olá! Eu sou Maria Eduarda, tenho 24 anos, sou teresinense e estudante do último período de Bacharelado em Administração pela Universidade Estadual do Piauí.
+        Olá! Eu sou Maria Eduarda, tenho 24 anos e sou estudante do último período de Administração pela UESPI.
         <br><br>
-        Minha jornada na gestão começou muito antes da sala de aula. Sempre fui apaixonada por organização, rotina e pela forma como pequenos ajustes podem transformar completamente a vida das pessoas. Ao longo da graduação, essa paixão ganhou estrutura, método e propósito — e hoje se tornou o meu trabalho.
-
-Criei este espaço para ajudar pessoas que desejam mais clareza, praticidade e equilíbrio, mas não querem nada complicado, pesado ou distante da realidade. Acredito na gestão feita de forma leve, acessível e aplicada ao dia a dia: aquela que realmente funciona.
-
-Aqui você vai encontrar orientação prática, ferramentas simples, acompanhamento próximo e um olhar humano, porque cada pessoa tem sua própria história, ritmo e necessidades. Meu objetivo é caminhar com você para que sua rotina trabalhe a seu favor — não contra você.
-
-Seja para organizar sua vida, sua rotina, seus estudos ou suas finanças leves, você não precisa fazer isso sozinha. Estou aqui para te guiar nessa jornada de forma clara, gentil e eficiente.
+        Acredito na gestão feita de forma leve, acessível e aplicada ao dia a dia.
         <br><br>
         <strong>Vamos construir sua melhor versão na prática?</strong>
       </p>
@@ -257,58 +210,15 @@ Seja para organizar sua vida, sua rotina, seus estudos ou suas finanças leves, 
   </div>
 </section>
 
-    <section id="servicos" class="card" style="margin-top:18px">
-      <h3>Serviços</h3>
-      <div class="gallery">
-        <img src="gallery1.jpg" />
-        <img src="gallery2.jpg" />
-        <img src="gallery3.jpg" />
-      </div>
-    </section>
+<footer>
+  © <span id="ano"></span> — ME - Gestão na Prática
+</footer>
 
-    <section id="blog" class="card" style="margin-top:18px">
-      <h3>Blog</h3>
-      <div class="grid-3">
-        <div class="card">Post 1</div>
-        <div class="card">Post 2</div>
-        <div class="card">Post 3</div>
-      </div>
-    </section>
+</div>
 
-    <section id="depoimentos" class="card" style="margin-top:18px">
-      <h3>Depoimentos</h3>
-    </section>
-
-    <section id="contato" class="card" style="margin-top:18px">
-      <h3>Contato</h3>
-      <a href="mailto:me.gestaonapratica@gmail.com">✉️ Email — me.gestaonapratica@gmail.com</a>
-
-      <form style="margin-top:12px;display:grid;gap:8px">
-        <input placeholder="Nome" />
-        <input placeholder="Telefone / WhatsApp" />
-        <textarea placeholder="Mensagem"></textarea>
-        <button class="btn btn-primary">Enviar</button>
-      </form>
-    </section>
-
-    <footer>
-      © <span id="ano"></span> — ME - Gestão na Prática
-    </footer>
-  </div>
-
-  <script>
-    document.getElementById("ano").textContent = new Date().getFullYear();
-  </script>
-
+<script>
+  document.getElementById("ano").textContent = new Date().getFullYear();
+</script>
 </body>
 </html>
-    
-
-
-
-
-
-
-
-
 
