--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
 
     <div class="sobre-foto">
 
-      <img src="Semfund" alt="Maria Eduarda - ME Gestão na Prática">
+      <img src="Sem fundo" alt="Maria Eduarda - ME Gestão na Prática">
 
     </div>
 
@@ -607,6 +607,7 @@ Seja para organizar sua vida, sua rotina, seus estudos ou suas finanças leves, 
 </html>
 
     
+
 
 
 
