--- a/index.html
+++ b/index.html
@@ -319,32 +319,19 @@
     }
 
     .sobre-container {
-
-  display: grid;
-
-  grid-template-columns: 220px 1fr;
-
-  gap: 20px;
-
-  align-items: center;
-
+.sobre-container {
+  display: flex;
+  gap: 24px;
+  align-items: flex-start;
 }
-
-
 
 .sobre-foto img {
-
-  width: 100%;
-
+  width: 180px;
+  height: auto;
+  object-fit: contain;
   border-radius: 14px;
-
   box-shadow: var(--shadow);
-
-  object-fit: cover;
-
 }
-
-
 
 .sobre-texto p {
 
@@ -607,6 +594,7 @@ Seja para organizar sua vida, sua rotina, seus estudos ou suas finanças leves, 
 </html>
 
     
+
 
 
 
