--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
 
     <div class="sobre-foto">
 
-      <img src="Semfundo.png" alt="Maria Eduarda - ME Gestão na Prática">
+      <img src="semfundo.png" alt="Maria Eduarda - ME Gestão na Prática">
 
     </div>
 
@@ -594,6 +594,7 @@ Seja para organizar sua vida, sua rotina, seus estudos ou suas finanças leves, 
 </html>
 
     
+
 
 
 
