--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 
       <div class="sobre-container">
         <div class="sobre-foto">
-          <img src="semfundo.png" alt="Maria Eduarda - ME Gestão na Prática">
+          <img src="sobre.png" alt="Maria Eduarda - ME Gestão na Prática">
         </div>
 
         <div class="sobre-texto">
@@ -307,3 +307,4 @@
 
 </body>
 </html>
+
