--- a/index.html
+++ b/index.html
@@ -288,18 +288,23 @@ Seja para organizar sua vida, sua rotina, seus estudos ou suas finanças leves, 
     </section>
 
     <section id="contato" class="card" style="margin-top:24px">
-      <h3>Contato</h3>
-      <a href="mailto:me.gestaonapratica@gmail.com">
-        ✉️ me.gestaonapratica@gmail.com
-      </a>
+  <h3>Contato</h3>
 
-      <form style="margin-top:12px;display:grid;gap:8px">
-        <input placeholder="Nome">
-        <input placeholder="Telefone / WhatsApp">
-        <textarea placeholder="Mensagem"></textarea>
-        <button class="btn btn-primary">Enviar</button>
-      </form>
-    </section>
+  <p>
+    Se você deseja conversar comigo, tirar dúvidas ou saber mais sobre
+    consultorias e orientações práticas, entre em contato pelo e-mail abaixo.
+  </p>
+
+  <p style="margin-top:12px">
+    ✉️ <a href="mailto:me.gestaonapratica@gmail.com">
+      me.gestaonapratica@gmail.com
+    </a>
+  </p>
+
+  <p style="margin-top:8px;font-size:14px;color:var(--muted)">
+    Retorno em até 24 horas úteis.
+  </p>
+</section>
 
     <footer>
       © <span id="ano"></span> — ME - Gestão na Prática
@@ -313,5 +318,6 @@ Seja para organizar sua vida, sua rotina, seus estudos ou suas finanças leves, 
 
 </body>
 </html>
+
 
 
