--- a/index.html
+++ b/index.html
@@ -266,22 +266,43 @@ Seja para organizar sua vida, sua rotina, seus estudos ou suas finanças leves, 
     </section>
 
     <section id="servicos" class="card" style="margin-top:24px">
-      <h3>Serviços</h3>
-      <div class="gallery">
-        <img src="gallery1.jpg">
-        <img src="gallery2.jpg">
-        <img src="gallery3.jpg">
-      </div>
-    </section>
+  <h3>Serviços</h3>
 
-    <section id="blog" class="card" style="margin-top:24px">
-      <h3>Blog</h3>
-      <div class="grid-3">
-        <div class="card">Post 1</div>
-        <div class="card">Post 2</div>
-        <div class="card">Post 3</div>
-      </div>
-    </section>
+  <div class="grid-3">
+
+    <div class="card">
+      <h4>🗂 Organização da Rotina e Processos</h4>
+      <p>
+        Apoio na organização da rotina, priorização de tarefas e criação
+        de processos simples para o dia a dia.
+        <br><br>
+        <strong>Resultado:</strong> mais clareza, menos sobrecarga e mais produtividade.
+      </p>
+    </div>
+
+    <div class="card">
+      <h4>💰 Organização Financeira Básica</h4>
+      <p>
+        Orientação prática para organizar entradas e saídas, controlar gastos
+        e entender melhor sua realidade financeira.
+        <br><br>
+        <strong>Resultado:</strong> mais controle, segurança e decisões conscientes.
+      </p>
+    </div>
+
+    <div class="card">
+      <h4>🎯 Consultoria Administrativa Simples</h4>
+      <p>
+        Consultoria personalizada para quem quer organizar a rotina ou o negócio
+        sem complicação e com foco no que realmente funciona.
+        <br><br>
+        <strong>Resultado:</strong> organização prática e adaptada à sua realidade.
+      </p>
+    </div>
+
+  </div>
+</section>
+
 
     <section id="depoimentos" class="card" style="margin-top:24px">
       <h3>Depoimentos</h3>
@@ -318,6 +339,7 @@ Seja para organizar sua vida, sua rotina, seus estudos ou suas finanças leves, 
 
 </body>
 </html>
+
 
 
 
