--- a/index.html
+++ b/index.html
@@ -304,9 +304,23 @@ Seja para organizar sua vida, sua rotina, seus estudos ou suas finanças leves, 
 </section>
 
 
-    <section id="depoimentos" class="card" style="margin-top:24px">
-      <h3>Depoimentos</h3>
-    </section>
+   <section id="depoimentos" class="card" style="margin-top:24px">
+  <h3>Depoimentos</h3>
+
+  <div class="depoimento-card">
+    <p class="depoimento-texto">
+      “Cada pessoa tem uma realidade, um ritmo e uma história diferente.
+      <br><br>
+      Por isso, meu trabalho é construído junto com você, com escuta, clareza
+      e respeito ao seu momento.”
+    </p>
+
+    <p class="depoimento-em-breve">
+      ✨ Em breve, este espaço será preenchido com histórias reais de transformação.
+    </p>
+  </div>
+</section>
+
 
     <section id="contato" class="card" style="margin-top:24px">
   <h3>Contato</h3>
@@ -339,6 +353,7 @@ Seja para organizar sua vida, sua rotina, seus estudos ou suas finanças leves, 
 
 </body>
 </html>
+
 
 
 
