--- a/index.html
+++ b/index.html
@@ -303,6 +303,48 @@ Seja para organizar sua vida, sua rotina, seus estudos ou suas finanças leves, 
   </div>
 </section>
 
+    <section id="blog" class="card" style="margin-top:24px">
+  <h3>Blog</h3>
+
+  <p style="max-width:720px;line-height:1.6">
+    Este é um espaço para compartilhar reflexões, dicas práticas e conteúdos
+    sobre organização, produtividade e gestão aplicada ao dia a dia.
+  </p>
+
+  <div class="blog-grid">
+
+    <div class="blog-card">
+      <span class="blog-tag">Organização</span>
+      <h4>Como organizar sua rotina sem se sentir sobrecarregada</h4>
+      <p>
+        Pequenos ajustes na rotina podem gerar grandes resultados quando feitos
+        de forma consciente e possível.
+      </p>
+      <span class="blog-em-breve">Em breve</span>
+    </div>
+
+    <div class="blog-card">
+      <span class="blog-tag">Produtividade</span>
+      <h4>Produtividade real: fazer o que importa</h4>
+      <p>
+        Ser produtiva não é fazer mais, é fazer melhor — respeitando seu ritmo
+        e sua realidade.
+      </p>
+      <span class="blog-em-breve">Em breve</span>
+    </div>
+
+    <div class="blog-card">
+      <span class="blog-tag">Gestão simples</span>
+      <h4>Gestão não precisa ser complicada</h4>
+      <p>
+        A gestão que funciona é aquela que cabe na sua vida e te ajuda,
+        não a que te paralisa.
+      </p>
+      <span class="blog-em-breve">Em breve</span>
+    </div>
+
+  </div>
+</section>
 
    <section id="depoimentos" class="card" style="margin-top:24px">
   <h3>Depoimentos</h3>
@@ -353,6 +395,7 @@ Seja para organizar sua vida, sua rotina, seus estudos ou suas finanças leves, 
 
 </body>
 </html>
+
 
 
 
