--- a/index.html
+++ b/index.html
@@ -219,6 +219,19 @@
         grid-template-columns: 1fr;
       }
     }
+
+    @media (max-width: 900px) {
+  .blog-grid {
+    grid-template-columns: repeat(2,1fr);
+  }
+}
+
+@media (max-width: 520px) {
+  .blog-grid {
+    grid-template-columns: 1fr;
+  }
+}
+
   </style>
 </head>
 
@@ -431,6 +444,7 @@ Seja para organizar sua vida, sua rotina, seus estudos ou suas finanças leves, 
 
 </body>
 </html>
+
 
 
 
