--- a/index.html
+++ b/index.html
@@ -352,6 +352,50 @@ Seja para organizar sua vida, sua rotina, seus estudos ou suas finanças leves, 
   </div>
 </section>
 
+    <section id="como-funciona" class="card" style="margin-top:24px">
+  <h3>Como funciona</h3>
+
+  <p style="max-width:720px; line-height:1.6">
+    Meu acompanhamento é simples, humano e adaptado à sua realidade.
+    Nada de fórmulas prontas ou processos complicados — caminhamos juntas,
+    passo a passo.
+  </p>
+
+  <div class="grid-3" style="margin-top:18px">
+    <div class="card">
+      <h4>1️⃣ Primeiro contato</h4>
+      <p>
+        Você entra em contato por e-mail contando, de forma breve,
+        o que deseja organizar: rotina, finanças ou processos.
+      </p>
+    </div>
+
+    <div class="card">
+      <h4>2️⃣ Entendimento da sua realidade</h4>
+      <p>
+        Analiso seu momento, suas dificuldades e objetivos.
+        Cada orientação é pensada de acordo com sua rotina,
+        ritmo e necessidades reais.
+      </p>
+    </div>
+
+    <div class="card">
+      <h4>3️⃣ Orientação prática</h4>
+      <p>
+        Recebe direcionamentos claros, ferramentas simples
+        e sugestões aplicáveis ao seu dia a dia,
+        sem complicação.
+      </p>
+    </div>
+  </div>
+
+  <div class="cta" style="margin-top:20px">
+    <a href="#contato" class="btn btn-primary">
+      Quero organizar minha rotina
+    </a>
+  </div>
+</section>
+
     <section id="blog" class="card" style="margin-top:24px">
   <h3>Blog</h3>
 
@@ -444,6 +488,7 @@ Seja para organizar sua vida, sua rotina, seus estudos ou suas finanças leves, 
 
 </body>
 </html>
+
 
 
 
