--- a/index.html
+++ b/index.html
@@ -248,6 +248,7 @@
       <nav>
         <a href="#sobre">Sobre mim</a>
         <a href="#servicos">Serviços</a>
+        <a href="#como">Como funciona</a>
         <a href="#blog">Blog</a>
         <a href="#depoimentos">Depoimentos</a>
         <a href="#contato" class="primary">Contato</a>
@@ -488,6 +489,7 @@ Seja para organizar sua vida, sua rotina, seus estudos ou suas finanças leves, 
 
 </body>
 </html>
+
 
 
 
