--- a/index.html
+++ b/index.html
@@ -439,6 +439,24 @@ Seja para organizar sua vida, sua rotina, seus estudos ou suas finanças leves, 
 
   </div>
 </section>
+    <section class="card" style="margin-top:24px;text-align:center" id="acolhimento">
+  <h3>Uma pausa pra você</h3>
+
+  <p id="frase-inicial" style="max-width:640px;margin:12px auto;line-height:1.6">
+    “Sentir-se sobrecarregada não significa falta de capacidade —
+    significa que você está tentando dar conta de muita coisa sozinha.”
+  </p>
+
+  <button class="btn btn-primary" onclick="mostrarMensagem()">
+    Eu precisava ler isso hoje
+  </button>
+
+  <p id="mensagem-final"
+     style="display:none;max-width:640px;margin:16px auto;font-weight:600;color:var(--text-strong)">
+    💛 Respira. Um passo de cada vez já é progresso.
+    Você não precisa fazer tudo hoje.
+  </p>
+</section>
 
    <section id="depoimentos" class="card" style="margin-top:24px">
   <h3>Depoimentos</h3>
@@ -489,6 +507,7 @@ Seja para organizar sua vida, sua rotina, seus estudos ou suas finanças leves, 
 
 </body>
 </html>
+
 
 
 
