--- a/index.html
+++ b/index.html
@@ -234,6 +234,11 @@
 
   </style>
 </head>
+<script>
+  function mostrarMensagem() {
+    document.getElementById("mensagem-final").style.display = "block";
+  }
+</script>
 
 <body>
 
@@ -507,6 +512,7 @@ Seja para organizar sua vida, sua rotina, seus estudos ou suas finanças leves, 
 
 </body>
 </html>
+
 
 
 
