--- a/index.html
+++ b/index.html
@@ -498,6 +498,28 @@ Seja para organizar sua vida, sua rotina, seus estudos ou suas finanças leves, 
   </div>
 </section>
 
+<section id="quiz" class="card" style="margin-top:24px;text-align:center">
+  <h3>Por onde você deveria começar a se organizar hoje?</h3>
+
+  <p style="max-width:600px;margin:8px auto;line-height:1.6">
+    Responda com sinceridade. Não existem respostas certas ou erradas.
+  </p>
+
+  <p id="pergunta-quiz" style="font-weight:600;margin-top:16px"></p>
+
+  <div id="opcoes-quiz"
+       style="margin-top:16px;display:flex;flex-direction:column;gap:10px;max-width:420px;margin-left:auto;margin-right:auto">
+  </div>
+
+  <p id="resultado-quiz"
+     style="margin-top:20px;font-weight:600;color:var(--text-strong);display:none">
+  </p>
+
+  <a href="#contato" id="cta-quiz" class="btn btn-primary"
+     style="display:none;margin-top:14px">
+    Quero ajuda para começar com calma
+  </a>
+</section>
 
     <section id="contato" class="card" style="margin-top:24px">
   <h3>Contato</h3>
@@ -530,6 +552,7 @@ Seja para organizar sua vida, sua rotina, seus estudos ou suas finanças leves, 
 
 </body>
 </html>
+
 
 
 
